src/main/webapp/WEB-INF/views/css/header.css
.appLogout {
    height: 20px;
    width: 98%;
    padding: 5px 15px 5px 15px;
    display: flex;
    justify-content: space-between;
}
.appLogout a {
    font: bold 11px Arial;
    text-decoration: none;
    background-color: #EEEEEE;
    color: #333333;
    padding: 2px 6px 2px 6px;
    border-top: 1px solid #CCCCCC;
    border-right: 1px solid #333333;
    border-bottom: 1px solid #333333;
    border-left: 1px solid #CCCCCC;
}

